# luma-subtitle

./: .gitignore  README.md  README.zh-CN.md  index.html  package.json  pnpm-lock.yaml  skills-lock.json  vite.config.ts
.agents/skills/release-version/: SKILL.md
.agents/skills/release-version/agents/: openai.yaml  openai.yml
.github/workflows/: release.yml
scripts/: check-env.ps1  prepare-sidecars.ps1
src/: App.tsx  config.ts  i18n.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  default.test.ts
src-tauri/src/: commands.rs  dependencies.rs  environment.rs  job_events.rs  jobs.rs  main.rs  paths.rs  process_utils.rs  settings.rs  state.rs  subtitles.rs  task_db.rs  tests.rs  translation.rs
src-tauri/src/dependencies/: download.rs  events.rs  install.rs  source_build.rs
src-tauri/src/jobs/: adhoc.rs  helpers.rs  process.rs  queue.rs  requests.rs  single_job.rs  task_runner.rs
src-tauri/src/subtitles/: vocalization.rs
src-tauri/src/task_db/: events.rs  models.rs  preferences.rs  schema.rs
src-tauri/src/translation/: client.rs  parser.rs  prompt.rs
src/components/app/: settings.tsx  shared.tsx  task-detail-config.tsx  task-detail.tsx  tasks.tsx
src/components/ui/: button.tsx  tooltip.tsx
src/hooks/: use-app-resume.ts  use-settings-page-state.ts  use-task-detail-state.test.ts  use-task-detail-state.ts  use-tasks-page-state.ts
src/layout/: AppLayout.tsx
src/lib/: app-utils.test.ts  app-utils.ts  task-data.test.ts  task-data.ts  tauri-api.test.ts  tauri-api.ts  updater-progress.test.ts  updater-progress.ts  updater.ts
src/locales/: en-US.ts  index.ts  zh-CN.ts
src/pages/: SettingsPage.tsx  TaskDetailPage.tsx  TasksPage.tsx  settings-page-layout.test.ts
src/styles/: base.css  detail.css  responsive.css  settings.css  shell.css
