[package]
name = "luma-subtitle"
version = "1.1.6"
description = "Local video transcription, translation, and SRT export."
authors = ["Luma Subtitle"]
license = "GPL-3.0-or-later"
edition = "2021"
rust-version = "1.80"
build = "build.rs"

[build-dependencies]
tauri-build = { version = "=2.6.2", features = [] }

[dependencies]
dirs = "5.0"
home = "=0.5.9"
idna_adapter = "=1.0.0"
indexmap = "=2.7.0"
hashbrown = "=0.15.5"
hyper-rustls = "=0.27.3"
normpath = "=1.3.0"
opener = "0.7"
parking_lot = "0.12"
reqwest = { version = "=0.12.9", default-features = false, features = ["json", "rustls-tls"] }
rfd = "0.15"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "=3.11.0"
serde_with_macros = "=3.11.0"
tauri = { version = "=2.11.2", features = [] }
time = "=0.3.47"
tokio = { version = "=1.40.0", features = ["fs", "process", "time"] }
unicode-segmentation = "=1.12.0"
url = "=2.5.4"
uuid = { version = "=1.11.0", features = ["v4"] }
which = "6.0"
zip = { version = "2.2", default-features = false, features = ["deflate"] }
tauri-plugin-process = "=2.3.1"
tauri-plugin-dialog = "=2.6.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "=2.10.1"
